k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice-game-ingress
  namespace: devops
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - dice-game.local
    secretName: self-signed-tls
  rules:
  # התיקון: המקף הזה (-) הוא קריטי
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dice-game-service
            port:
              number: 5000
